--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>tao-data</module>
         <module>tao-ops</module>
         <module>tao-gateway</module>
+        <module>tao-mbg</module>
     </modules>
 
     <properties>
@@ -21,6 +22,7 @@
         <spring-cloud.version>2020.0.1</spring-cloud.version>
         <spring-cloud.alibaba.version>2.2.1.RELEASE</spring-cloud.alibaba.version>
         <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
+        <mybatis.generator.core.version>1.4.0</mybatis.generator.core.version>
     </properties>
 
     <dependencyManagement>
