--- a/tao-mbg/pom.xml
+++ b/tao-mbg/pom.xml
@@ -17,8 +17,9 @@
 
     <properties>
         <mysql.connector.java.version>8.0.26</mysql.connector.java.version>
-        <mybatis.spring.boot.starter.version>2.2.0</mybatis.spring.boot.starter.version>
         <druid.spring.boot.starter.version>1.2.6</druid.spring.boot.starter.version>
+        <mapper.spring.boot.starter.version>2.1.5</mapper.spring.boot.starter.version>
+        <mybatis.spring.boot.starter.version>2.2.0</mybatis.spring.boot.starter.version>
     </properties>
 
     <dependencies>
@@ -33,9 +34,12 @@
             <version>${druid.spring.boot.starter.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>${mybatis.spring.boot.starter.version}</version>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>${mapper.spring.boot.starter.version}</version>
         </dependency>
     </dependencies>
+<!--    <plugin>-->
+<!--        -->
+<!--    </plugin>-->
 </project>
