--- a/tao-mbg/pom.xml
+++ b/tao-mbg/pom.xml
@@ -19,7 +19,6 @@
         <mysql.connector.java.version>8.0.26</mysql.connector.java.version>
         <druid.spring.boot.starter.version>1.2.6</druid.spring.boot.starter.version>
         <mapper.spring.boot.starter.version>2.1.5</mapper.spring.boot.starter.version>
-        <mybatis.spring.boot.starter.version>2.2.0</mybatis.spring.boot.starter.version>
     </properties>
 
     <dependencies>
@@ -39,7 +38,30 @@
             <version>${mapper.spring.boot.starter.version}</version>
         </dependency>
     </dependencies>
-<!--    <plugin>-->
-<!--        -->
-<!--    </plugin>-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.7</version>
+                <configuration>
+                    <configurationFile>${basedir}/src/main/resources/generatorConfig.xml</configurationFile>
+                    <overwrite>true</overwrite>
+                    <verbose>true</verbose>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>${mysql.connector.java.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>tk.mybatis</groupId>
+                        <artifactId>mapper</artifactId>
+                        <version>4.1.5</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
+    </build>
 </project>
