--- a/tao-mbg/pom.xml
+++ b/tao-mbg/pom.xml
@@ -19,6 +19,7 @@
         <mysql.connector.java.version>8.0.26</mysql.connector.java.version>
         <druid.spring.boot.starter.version>1.2.6</druid.spring.boot.starter.version>
         <mapper.spring.boot.starter.version>2.1.5</mapper.spring.boot.starter.version>
+        <pagehelper.spring.boot.starter.version>1.4.0</pagehelper.spring.boot.starter.version>
     </properties>
 
     <dependencies>
@@ -36,6 +37,11 @@
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
             <version>${mapper.spring.boot.starter.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>${pagehelper.spring.boot.starter.version}</version>
         </dependency>
     </dependencies>
     <build>
